--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.0",
     "mysql2": "^3.12.0"
   }
 }
